# aus-wildlife-roadkill-risk

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  METHODOLOGY.md  README.md  analyzer.py  fetcher.py  pyproject.toml  requirements.txt  test.ipynb
.github/scripts/: deploy_hf.py
.github/workflows/: deploy-hf.yml
.streamlit/: config.toml
app/: streamlit_app.py
app/assets/: footer.html  header.html  style.css
app/components/: map_view.py  shap_panel.py
data/model/: feature_cols.pkl  sign_placements.geojson
data/processed/: state_boundaries_simplified.parquet
notebooks/: test.ipynb
scripts/: analyzer.py  fetcher.py  model.py  sign_placement.py
sightings/: brown-bandicoot.parquet  brushtail-possum.parquet  echidna.parquet  grey-kangaroo.parquet  koala.parquet  platypus.parquet  red-kangaroo.parquet  red-necked-wallabi.parquet  ringtail-possum.parquet  swamp-wallabi.parquet  wombat.parquet
