[project]
name = "aus-wildlife-roadkill-risk-mapper"
version = "0.1.0"
description = "A national-scale geospatial machine learning platform that scores every road segment in Australia for wildlife-vehicle collision risk — and recommends precisely where to place warning signs."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "branca>=0.8.2",
    "esda>=2.9.0",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "libpysal>=4.14.1",
    "matplotlib>=3.10.9",
    "optuna>=4.8.0",
    "pandas>=3.0.3",
    "rasterio>=1.5.0",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "streamlit>=1.57.0",
    "streamlit-folium>=0.27.2",
    "xgboost>=3.2.0",
]
